...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeContainer"
        app:layout_constraintVertical_bias="0.419">

        <EditText
            android:id="@+id/username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/union"
            android:drawablePadding="5dp"
            android:drawableTint="#3F51B5"
            android:hint="Username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:drawableTint="#3F51B5"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FDBEA6"
            android:text="Login"
            android:textColor="#000000" />
...
