...
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:gravity="end">

            <Button
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accept"
                android:textColor="#FFFFFF"
                android:backgroundTint="#4CAF50"
                app:cornerRadius="20dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/reject_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reject"
                android:textColor="#FFFFFF"
                app:cornerRadius="20dp"
                android:backgroundTint="#DE6961" />
...
