...
        android:icon="@drawable/home_3__streamline_core_svg"
        android:id="@+id/home"

        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/search3" />

    <item
        android:icon="@drawable/baseline_add_circle_outline_42"
        android:id="@+id/add" />

...
